--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -9,6 +9,28 @@
 <body>
     <div id="header">
         <span class="logo">Bookmarks</span>
+        {% if request.user.is_authenticated %}
+            <ul class="menu">
+                <li {% if section == "dashboard" %} class="selected"{% endif %}>
+                    <a href="{% url "dashboard" %}">Panel Główny</a>
+                </li>
+                <li {% if section == "images" %}class="selected">{% endif %}
+                    <a href ="#">obrazy</a>
+                </li>
+                <li {% if section == "people" %}class="selected">{% endif %}
+                    <a href ="#">osoby</a>
+                </li>
+            </ul>
+        {% endif %}
+
+        <span class="user">
+            {% if request.user.is_authenticated %}
+                Witaj, {{ request.user.first_name }}!
+                <a href="{% url "logout" %}">Wyloguj</a>
+            {% else %}
+                <a href="{% url "login" %}">Zaloguj</a>
+            {% endif %}
+        </span>
     </div>
     <div id="content">
         {% block content %}
