--- a/account/templates/registration/logout.html
+++ b/account/templates/registration/logout.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Wylogowanie{% endblock %}
 
-</body>
-</html>
+{% block content %}
+    <h1>Wylogowanie</h1>
+<p>Zostałeś pomyślnie wylogowany. Możesz <a href="{% url "login" %}">zalogować się ponownie</a>.</p>
+{% endblock %}
