--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static "css/base.css" %}" rel="stylesheet">
+    <link href="{% static "css/base2.css" %}" rel="stylesheet">
 </head>
 <body>
     <div id="header">
@@ -14,10 +14,10 @@
                 <li {% if section == "dashboard" %} class="selected"{% endif %}>
                     <a href="{% url "dashboard" %}">Panel Główny</a>
                 </li>
-                <li {% if section == "images" %}class="selected">{% endif %}
+                <li {% if section == "images" %}class="selected"{% endif %}>
                     <a href ="#">obrazy</a>
                 </li>
-                <li {% if section == "people" %}class="selected">{% endif %}
+                <li {% if section == "people" %}class="selected"{% endif %}>
                     <a href ="#">osoby</a>
                 </li>
             </ul>
