--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -20,4 +20,9 @@
         </form>
         <p><a href="{% url "password_reset" %}">Zapomniałeś hasła?</a></p>
     </div>
+    <div class="social">
+        <ul>
+            <li class="facebook"><a href="{% url 'social:begin' 'facebook' %}">Zaloguj się za pomocą konta facebook</a></li>
+        </ul>
+    </div>
 {% endblock %}
